--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -11,13 +11,14 @@ cmake_minimum_required(VERSION 3.4.1)
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-             native-lib
+             heyhu
 
              # Sets the library as a shared library.
+             # 这里共享, 别的app就可以load此so文件
              SHARED
 
              # Provides a relative path to your source file(s).
-             native-lib.cpp )
+             heyhu.c )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -37,7 +38,7 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       native-lib
+                       heyhu
 
                        # Links the target library to the log library
                        # included in the NDK.
